# mfsr_utils

./: .envrc  .flake8  .gitignore  LICENSE  README.md  env.yml  flake.nix  pyproject.toml  synthetic_zurich_raw2rgb.py  temp.py
.github/problem_matchers/: black.jsonc  flake8.jsonc  isort.jsonc  mypy.jsonc  pyright.jsonc  pytest.jsonc
.github/workflows/: ci.yml  lint.yml  test.yml  typecheck.yml
mfsr_utils/datasets/: ntire_synthetic_burst_test_2022.py  ntire_synthetic_burst_val_2022.py  sony_arw.py  synthetic_zurich_raw2rgb.py  utilities.py  zurich_raw2rgb.py
mfsr_utils/datasets/protocols/: downloadable.py
mfsr_utils/datasets/utilities/: downloadable.py  utilities.py
mfsr_utils/pipelines/: camera.py  image_processing_params.py  image_transform_mats.py  image_transform_params.py  image_transformation_matrices.py  image_transformation_params.py  meta_info.py  noise.py  noises.py  rgb_gain.py  rgb_gains.py  synthetic_burst_generator.py  types.py
nix/: default.nix  mfsr_utils.nix  rawpy.nix
nix/devShells/: default.nix
nix/extensions/: mfsr_utils.nix
nix/overlays/: default.nix
tests/: conftest.py  utils.py
tests/test_pipelines/test_camera/: test_ccm.py  test_gamma.py  test_mosaic.py  test_smoothstep.py
tests/test_pipelines/test_camera_pipeline/: test_ccm.py  test_gamma.py  test_mosaic.py  test_smoothstep.py
tests/test_pipelines/test_image_transform_mats/: test_get_transform_mat.py
tests/test_pipelines/test_image_transformation_matrices/: test_get_tmat.py
tests/test_pipelines/test_noise/: test_apply_noise.py  test_random_read_noise.py  test_random_shot_noise.py
tests/test_pipelines/test_rgb_gain/: test_apply_rgb_gain.py
tests/test_pipelines/test_synthetic_burst_generator/: draft_rgb2rawburst.py  draft_single2lrburst.py  test_single2lrburst.py  test_tmat.py
