[build-system]
requires = ["setuptools >= 65", "wheel"]

[project]
name = "mfsr_utils"
version = "0.1.0"
description = "Multi-frame super-resolution utilities"
authors = [
    { name = "Ziwei Luo", email = "ziwei.ro@gmail.com" },
    { name = "Connor Baker", email = "connorbaker01@gmail.com" },
]
maintainers = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
readme = "README.md"
urls = { homepage = "https://github.com/connorbaker/mfsr_utils" }
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.0.*",
    "torchvision==0.15.0.*",
    "opencv-python-headless==4.6.0.66",
]

[project.optional-dependencies]
lint = ["black==22.12.0", "flake8==6.0.0", "isort==5.11.3"]
typecheck = ["pyright==1.1.284", "mypy==0.991"]
test = [
    "pytest==7.2.0",
    "pytest-xdist==3.1.0",
    "hypothesis==6.61.0",
    "hypothesis_torch_utils @ git+https://github.com/ConnorBaker/hypothesis_torch_utils.git@44de841ab38cbbb75de0b11a292bdb22f2ef9498",
]

[tool.setuptools]
include-package-data = true
package-dir = { mfsr_utils = "mfsr_utils" }
package-data = { mfsr_utils = ["py.typed"] }

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99
py_version = "39" # 3.10 isn't supported yet

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true
warn_unused_ignores = false # Pyright catches different things than mypy

[tool.pyright]
include = ["./mfsr_utils", "./tests"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-n4 --hypothesis-profile=dev_gpu"
testpaths = ["tests"]
