[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mfsr_utils"
version = "0.1.0"
description = "Multi-frame super-resolution utilities"
authors = [
    { name = "Ziwei Luo", email = "ziwei.ro@gmail.com" },
    { name = "Connor Baker", email = "connorbaker01@gmail.com" },
]
maintainers = [{ name = "Connor Baker", email = "connorbaker01@gmail.com" }]
license.text = "MIT"
urls.homepage = "https://github.com/connorbaker/mfsr_utils"
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.9",
    "rawpy>=0.18.1",
    "torch>=1.8",
    "torchvision>=0.9"
]

[project.optional-dependencies]
dev = [
    # Lint
    "black>=22.12.0",
    "ruff>=0.3.0",
    # Typecheck
    "mypy>=0.991",
]
test = [
    "pytest>=7.2.0",
    "pytest-xdist>=3.1.0",
    "hypothesis>=6.61.0",
    "hypothesis_torch_utils",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
line-length = 120

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true
warn_unused_ignores = false # Pyright catches different things than mypy

[tool.pyright]
include = ["./mfsr_utils", "./tests"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-n4 --hypothesis-profile=dev"
testpaths = ["tests"]
